# PDFReasoner

./: .gitignore  AGENTS.md  README.md  papercoach_implementation_prompt.md  papercoach_shapeup_pitch.md  pyproject.toml
papercoach/: __init__.py  cli.py  config.py  models.py  pipeline.py
papercoach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
papercoach/analyze/: __init__.py  citations.py  commentary.py  extractor.py  glossary.py  highlights.py  mindmap.py  prompt_library.py  structure.py  text_clean.py  tracing.py
papercoach/extract/: __init__.py  align.py  equations.py  extractor.py  normalize.py  structure.py
papercoach/integrations/: __init__.py  cache.py  crossref_client.py  grobid_client.py  ollama_client.py  semanticscholar_client.py
papercoach/llm/: __init__.py  client.py  prompt_library.py
papercoach/render/: __init__.py  layout.py  math_renderer.py  pdf_renderer.py
papercoach/reporting/: __init__.py  html_report.py
papercoach/web/: __init__.py  app.py  jobs.py
runs/audit-before/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system/: annotation_plan.json  evidence_ledger.jsonl  mindmap
runs/linear-system-audit/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit10/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit2/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit3/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit4/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd  report.html
runs/linear-system-audit5/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit6/: annotation_plan.json  cache.sqlite  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit7/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit8/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-audit9/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
runs/linear-system-real/: annotation_plan.json  evidence_ledger.jsonl  mindmap  mindmap.md  mindmap.mmd
tests/: conftest.py
tests/e2e/: test_cli_annotate.py
tests/integration/: test_cache_behavior.py  test_pipeline.py  test_plan_pipeline.py  test_preflight_failures.py  test_render_pipeline.py  test_web_app.py
tests/unit/: test_alignment.py  test_citations.py  test_cli.py  test_client.py  test_config.py  test_equation_quality.py  test_equations.py  test_extract_and_structure.py  test_glossary_and_commentary.py  test_layout.py  test_layout_order.py  (+8 more)
(+7 files in other folders)
