[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papercoach"
version = "0.1.0"
description = "Phase-1 research paper highlighting pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
papercoach = "papercoach.cli:main"

[tool.setuptools]
packages = [
  "papercoach",
  "papercoach.extract",
  "papercoach.llm",
  "papercoach.render",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
