[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papercoach"
version = "0.1.0"
description = "Phase-1 research paper highlighting pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "matplotlib>=3.8",
  "fastapi>=0.115,<0.116",
  "jinja2>=3.1",
  "python-multipart>=0.0.20,<0.0.21",
  "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
papercoach = "papercoach.cli:main"

[tool.setuptools]
packages = [
  "papercoach",
  "papercoach.extract",
  "papercoach.llm",
  "papercoach.render",
  "papercoach.web",
]

[tool.setuptools.package-data]
"papercoach.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
